--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -36,7 +36,17 @@
 
     <hr />
 
-    <!-- TODO #2 - Loop over jobs map to display all job fields -->
+    <h1 th:text="${count !=null}? ${count} + 'Results(s)' : ''"></h1>
+    <span th:each="result : ${results}">
+        <table class="job-listing">
+            <tr th:each="item : ${result}">
+                <th th:text="${#strings.capitalizeWords(item.key)} + ':'"></th>
+            <td th:text="${item.value}"></td>
+            </tr>
+        </table>
+
+    </span>
+
 
 </div>
 
